<resources>
    <string name="app_name">관악구통합도서관</string>
    <string name="noti_channel_id">ga_noti_channel_id</string>
    <string name="retry">재시도</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="home">홈</string>
    <string name="book_search">도서검색</string>
    <string name="my_library">나의도서관</string>
    <string name="setting">설정</string>
    <string name="menu">메뉴</string>
    <string name="device_info_error">푸시키를 다시 확인하세요.</string>
    <string name="alarm">알림</string>
    <string name="activity_finish_message">종료하시겠습니까?</string>
    <string name="auto_login_fail_error">회원정보 변경 또는 네트워크가 원할하지 않아 로그아웃 되었습니다.\n로그인 후 이용해주세요.</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="auto_login">자동로그인</string>
    <string name="force_update_message">관악구통합도서관 앱이 업데이트 되었습니다. 원활한 사용을위해 앱을 업데이트해주세요.</string>
    <string name="permission_notification">알림을 받으시려면\n우측 하단 [설정] 버튼을 누른 후,\n알림설정 권한을 허용해주세요!</string>
    <string name="permission_location">위치 정보 제공을 받으시려면\n우측 하단 [설정] 버튼을 누른 후,\n위치 권한을 허용해주세요!</string>
    <string name="intro_title">관악문화재단</string>
    <string name="intro_desc">관악구통합도서관</string>
    <string name="intro_copy_right">Copyright(c) 관악구통합도서관\nAll Right Reserved.</string>

    <!-- 전체 메뉴 -->
    <string name="login_before_message">로그인이 필요한 서비스 입니다.</string>
    <string name="login_after_message_format">%s 님, 반갑습니다</string>

    <string name="data_search">자료검색</string>
    <string name="integrated_resource_search">통합자료검색</string>
    <string name="search_new_info">신착자료검색</string>
    <string name="u_library_search">U-도서관검색</string>
    <string name="smart_library_search">스마트도서관검색</string>
    <string name="frequently_read_books">많이보는책</string>

    <string name="user_guide">이용안내</string>
    <string name="notice">공지사항</string>
    <string name="facility_info">시설정보</string>

    <string name="apply_participate">신청/참여</string>
    <string name="reading_culture_program">독서문화프로그램</string>
    <string name="request_desired_book">희망도서신청</string>
    <string name="free_delivery">맘대로택배</string>
    <string name="loan_from_local_bookstores">동네서점바로대출제</string>

    <string name="electronic_library">전자도서관</string>
    <string name="e_books">전자책</string>
    <string name="audio_books">오디오북</string>

    <string name="my_info">내정보</string>
    <string name="book_usage_history">도서이용내역</string>
    <string name="interlibrary_loan_request_history">상호대차신청내역</string>
    <string name="my_books_of_interest">나의관심도서</string>
    <string name="my_request_history">나의신청내역</string>
    <string name="request_for_desired_books">희망도서신청내역</string>
    <string name="delivery_request_details">맘대로택배신청내역</string>

    <string name="membership_information">회원정보</string>
    <string name="mobile_membership_card">모바일회원증</string>
    <string name="edit_membership_information">회원정보수정</string>
    <string name="change_password">비밀번호변경</string>
    <string name="re_agree_personal_information">개인정보재동의</string>

    <string name="settings">설정</string>
    <string name="app_settings">앱설정</string>

    <!-- 회원정보인증 -->
    <string name="login_title">로그인</string>
    <string name="login_desc_1">관악구통합도서관 로그인 페이지 입니다.</string>
    <string name="login_caption_1">로그인 하시면 홈페이지 서비스 및 대출연장/예약신청 등의 도서관 서비스를 이용하실 수 있습니다.</string>
    <string name="login_caption_2">로그인 정보가 기억나지 않는 경우 아이디 찾기 또는 비밀번호 재설정을 통해 확인하실 수 있습니다.</string>
    <string name="id_input_hint">아이디 입력</string>
    <string name="pwd_input_hint">비밀번호 입력</string>
    <string name="login_fail_error">아이디 또는 비밀번호를 다시 확인하세요</string>
    <string name="login_success_msg">로그인 되었습니다.</string>
    <string name="login_error_associate_member_msg">도서관 정회원만 이용 가능합니다.</string>
    <string name="loan_available">대출가능</string>
    <string name="login_after_mobile_card_format">%s 님 반갑습니다.</string>
    <string name="my">본인</string>
    <string name="family_format">가족%d</string>
    <string name="my_usage_status">나의이용현황</string>
    <string name="book_loan_status">도서대출현황</string>
    <string name="reserved_book_status">예약도서현황</string>
    <string name="interlibrary_loan_inquiry">상호대차조회</string>
    <string name="requested_book_inquiry">희망도서조회</string>
    <string name="current_situation_format">%d/%d</string>

    <!-- 설정 -->
    <string name="account">계정</string>
    <string name="login_need">로그인이 필요합니다.</string>
    <string name="login_setting">로그인 설정</string>
    <string name="auto_login_desc">앱 실행시 자동으로 로그인 됩니다.</string>
    <string name="biometric_login">생체 인증로그인</string>
    <string name="biometric_login_desc">단말기 기능지원시 설정 가능합니다\n자동로그인 설정되어 있으면 실행되지 않습니다.</string>
    <string name="push_setting">푸시알림 설정</string>
    <string name="push_setting_desc">독서문화프로그램 안내 알림을 받습니다.</string>
    <string name="push_re_agree_desc">재동의 알림 안내 알림을 받습니다.</string>
    <string name="shake_setting">흔들어열기 설정</string>
    <string name="shake_setting_desc">모바일 회원증을 흔들어서 엽니다.</string>
    <string name="app_version_info">앱정보</string>
    <string name="current_version">현재버전</string>
    <string name="latest_version">최신버전</string>
    <string name="available_after_logging_in">로그인 후 이용가능합니다.</string>
    <string name="auto_login_biometric_check_error">자동로그인 또는 생체인증로그인 중 하나만 설정 가능합니다.</string>
    <string name="qrcode_associate_member_error_msg">도서관대출회원만 이용 가능합니다</string>
    <string name="biometric_permission_msg">생체로그인을 위해 생체인식>지문 설정을 진행해주세요</string>
    <string name="biometric_auth_title">생체인증 로그인</string>
    <string name="biometric_auth_msg">지문 또는 얼굴로 로그인 하세요</string>
    <string name="biometric_cancel_msg">생체인증을 취소하여 메인이로 이동합니다</string>
    <string name="biometric_count_error_msg">5회 인증 실패하여 메인으로 이동합니다</string>
    <string name="associate_member_error">도서관 대출회원 ( 정회원 ) 만 이용이 가능합니다.</string>
    <string name="loan_suspension">대출정지</string>
    <string name="expulsion_of_member">제적회원</string>
    <string name="interlibrary_loan_suspension">상호대차정지</string>
    <string name="u_library_suspension">U도서관정지</string>
    <string name="associate_member">준회원</string>
</resources>