<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.yesjnet.gwanak.core.EnumApp" />

        <variable
            name="viewModel"
            type="com.yesjnet.gwanak.ui.main.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@drawable/bg_white_round_top_8dp">

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:elevation="8dp"
            android:background="@drawable/bg_white_round_top_8dp">

            <LinearLayout
                android:id="@+id/mainTab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                rippleColor="@{@color/ripple_effect}"
                android:onClick="@{() -> viewModel.setSelectTab(EnumApp.MainPage.HOME)}">

                <ImageView
                    android:id="@+id/mainTabImage1"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/main_bottom_one_selector"/>

                <TextView
                    android:id="@+id/mainTabLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/style_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/home"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainTab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                rippleColor="@{@color/ripple_effect}"
                android:onClick="@{() -> viewModel.setSelectTab(EnumApp.MainPage.BOOK_SEARCH)}">

                <ImageView
                    android:id="@+id/mainTabImage2"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/main_bottom_two_selector"/>

                <TextView
                    android:id="@+id/mainTabLabel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/style_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/book_search"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainTab3_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                rippleColor="@{@color/ripple_effect}"
                android:onClick="@{() -> viewModel.setSelectTab(EnumApp.MainPage.MY_LIBRARY)}">

                <ImageView
                    android:id="@+id/mainTabImage3"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="15dp"
                    android:visibility="visible"
                    android:background="@drawable/main_bottom_three_selector"/>

                <TextView
                    android:id="@+id/mainTabLabel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/style_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/my_library"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainTab4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                rippleColor="@{@color/ripple_effect}"
                android:onClick="@{() -> viewModel.setSelectTab(EnumApp.MainPage.SETTING)}">

                <ImageView
                    android:id="@+id/mainTabImage4"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/main_bottom_four_selector"/>

                <TextView
                    android:id="@+id/mainTabLabel4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/style_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/setting" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainTab5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                rippleColor="@{@color/ripple_effect}"
                android:onClick="@{() -> viewModel.setSelectTab(EnumApp.MainPage.MENU)}">

                <ImageView
                    android:id="@+id/mainTabImage5"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/main_bottom_five_selector"/>

                <TextView
                    android:id="@+id/mainTabLabel5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/style_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/menu"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>