<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable name="activity" type="com.yesjnet.gwanak.ui.main.SettingActivity"/>
        <variable name="viewModel" type="com.yesjnet.gwanak.ui.main.SettingViewModel"/>
        <variable name="listener" type="com.yesjnet.gwanak.extension.OnSingleClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <include
            android:id="@+id/icTopArea"
            layout="@layout/layout_top_area"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:listener="@{activity}" />
        <include
            android:id="@+id/icHeader"
            layout="@layout/layout_appbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/icTopArea" />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/icHeader"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp">
                <!-- 계정 -->
                <TextView
                    android:id="@+id/tvAccountLabel"
                    style="@style/LabelText"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/account"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/tvAccount"
                    style="@style/DescText"
                    android:layout_marginTop="8dp"
                    android:text="@{TextUtils.isEmpty(viewModel.onMemberInfo.userId) ? @string/login_need : viewModel.onMemberInfo.userId}"
                    app:layout_constraintTop_toBottomOf="@id/tvAccountLabel"
                    app:layout_constraintStart_toStartOf="@id/tvAccountLabel"
                    tools:text="@string/login_need"/>
                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:fontFamily="@font/style_bold"
                    android:textSize="17dp"
                    rippleColor="@{@color/ripple_effect}"
                    android:onClick="@{() -> viewModel.onClickLoginCheck(viewModel.onMemberInfo)}"
                    app:bindLoginUi="@{viewModel.onMemberInfo}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tvAccount"
                    tools:text="@string/login"/>
                <View
                    android:id="@+id/vAccountLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_EEEDED"
                    app:layout_constraintTop_toBottomOf="@id/tvAccount"/>

                <!-- 로그인 설정 -->
                <TextView
                    android:id="@+id/tvLoginSettingLabel"
                    style="@style/LabelText"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_setting"
                    app:layout_constraintTop_toBottomOf="@id/vAccountLine"
                    app:layout_constraintStart_toStartOf="@id/tvAccountLabel"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clLoginSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_F8F8F8"
                    app:layout_constraintTop_toBottomOf="@id/tvLoginSettingLabel">
                    <include
                        android:id="@+id/icAutoLogin"
                        layout="@layout/layout_alarm_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="15dp"
                        app:isChecked="@{viewModel.onAutoLogin}"
                        app:label="@{@string/auto_login}"
                        app:desc="@{@string/auto_login_desc}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <View
                        android:id="@+id/vAutoLoginLine"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="17dp"
                        app:layout_constraintTop_toBottomOf="@id/icAutoLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- 푸시알림 설정 -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPushLabel"
                    style="@style/LabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/push_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clLoginSetting" />
                <include
                    android:id="@+id/icPush1"
                    layout="@layout/layout_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:value="@{@string/push_setting_desc}"
                    app:isChecked="@{viewModel.onPushAlarm}"
                    app:listener="@{activity}"
                    app:layout_constraintTop_toBottomOf="@+id/tvPushLabel"/>
                <include
                    android:id="@+id/icPush2"
                    layout="@layout/layout_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:value="@{@string/push_re_agree_desc}"
                    app:isChecked="@{viewModel.onReAgreeAlarm}"
                    app:listener="@{activity}"
                    app:layout_constraintTop_toBottomOf="@+id/icPush1"/>
                <View
                    android:id="@+id/vPushSettingLine"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/color_EEEDED"
                    app:layout_constraintTop_toBottomOf="@id/icPush2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <!-- 흔들어 열기 -->
                <include
                    android:id="@+id/icShakeSetting"
                    layout="@layout/layout_alarm_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    app:isChecked="@{viewModel.onShakeOpen}"
                    app:label="@{@string/shake_setting}"
                    app:desc="@{@string/shake_setting_desc}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vPushSettingLine"/>
                <View
                    android:id="@+id/vShakeLine"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/color_EEEDED"
                    app:layout_constraintTop_toBottomOf="@id/icShakeSetting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <!-- 앱버전 정보 -->
                <TextView
                    android:id="@+id/tvAppVersionLabel"
                    style="@style/LabelText"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_version_info"
                    app:layout_constraintTop_toBottomOf="@id/vShakeLine"
                    app:layout_constraintStart_toStartOf="@id/tvAccountLabel"/>
                <TextView
                    android:id="@+id/tvCurrentVersionLabel"
                    style="@style/DescText"
                    android:layout_marginTop="11dp"
                    android:text="@string/current_version"
                    app:layout_constraintTop_toBottomOf="@id/tvAppVersionLabel"
                    app:layout_constraintStart_toStartOf="@id/tvAccountLabel"/>
                <TextView
                    android:id="@+id/tvCurrentVersion"
                    style="@style/DescText"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/color_3A3DAA"
                    bindVersion="@{viewModel.onCurrentVersion}"
                    app:layout_constraintTop_toTopOf="@id/tvCurrentVersionLabel"
                    app:layout_constraintBottom_toBottomOf="@id/tvCurrentVersionLabel"
                    app:layout_constraintStart_toEndOf="@id/tvCurrentVersionLabel"
                    tools:text="2.0.0"/>
                <TextView
                    android:id="@+id/tvLatestVersionLabel"
                    style="@style/DescText"
                    android:layout_marginTop="11dp"
                    android:text="@string/latest_version"
                    app:layout_constraintTop_toBottomOf="@id/tvCurrentVersion"
                    app:layout_constraintStart_toStartOf="@id/tvAccountLabel"/>
                <TextView
                    android:id="@+id/tvLatestVersion"
                    style="@style/DescText"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/color_3A3DAA"
                    bindVersion="@{viewModel.onLatestVersion}"
                    app:layout_constraintTop_toTopOf="@id/tvLatestVersionLabel"
                    app:layout_constraintBottom_toBottomOf="@id/tvLatestVersionLabel"
                    app:layout_constraintStart_toEndOf="@id/tvLatestVersionLabel"
                    tools:text="2.0.0"/>
                <View
                    android:id="@+id/vVersionInfoLabel"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/color_EEEDED"
                    app:layout_constraintTop_toBottomOf="@id/tvLatestVersion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/clFcm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/vVersionInfoLabel">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FCM TOKEN(개발버전만 보임) : "
                        android:textSize="12dp"
                        android:textColor="@color/color_222222"
                        android:fontFamily="@font/noto_sans_kr_medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:textSize="12dp"
                        android:textColor="@color/color_222222"
                        android:fontFamily="@font/noto_sans_kr_medium"
                        android:text="@{viewModel.onFcmToken}"
                        android:onClick="@{() -> viewModel.onFcmCopyClick(viewModel.onFcmToken)}"
                        rippleColor="@{@color/ripple_effect}"/>
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:show="@{viewModel.onDataProgress}"
            app:listener="@{listener}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>